I added the readme and I removed the JPG that wasn't loading.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 
-The container of portfolio.html's style */
+/*The container of portfolio.html's style */
 #container2 {
   background: #FFFFFF;
   width: 64%;
